--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ group 'com.k2data.app'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'maven'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
@@ -27,4 +29,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
     testRuntime("org.apache.logging.log4j:log4j-jcl:${log4jVersion}")
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "http://nexus.cloud.k2data.com.cn/repository/maven-snapshots") {
+                authentication(userName: "developer", password: "sdfnm23lk")
+            }
+            pom.version = "1.0-SNAPSHOT"
+            pom.artifactId = "kmxrest"
+            pom.groupId = "com.k2data.app"
+        }
+    }
 }
