--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ ext {
     okHttpVersion = '3.5.0'
     fastjsonVersion = '1.2.24'
     log4jVersion = 2.7
+    lombokVersion = '1.16.10'
 }
 
 dependencies {
     compile "commons-logging:commons-logging:1.2"
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
     compile "com.alibaba:fastjson:${fastjsonVersion}"
+    compile "org.projectlombok:lombok:${lombokVersion}"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
