--- a/build.gradle
+++ b/build.gradle
@@ -8,18 +8,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+//    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
     mavenCentral()
 }
 
 ext {
-    persistenceApiVersion = '1.0.2'
-    servletApiVersion = '3.1.0'
-    cglibVersion = '3.2.4'
     okHttpVersion = '3.5.0'
     fastjsonVersion = '1.2.24'
     log4jVersion = 2.7
     lombokVersion = '1.16.10'
+    jacksonVersion = '2.8.4'
 }
 
 dependencies {
@@ -27,6 +25,10 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
     compile "com.alibaba:fastjson:${fastjsonVersion}"
     compile "org.projectlombok:lombok:${lombokVersion}"
+
+    compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
